<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.matiego</groupId>
    <artifactId>ST14</artifactId>
    <version>${maven.build.timestamp}</version>
    <packaging>jar</packaging>

    <name>ST14</name>

    <description>A plugin for the ST14 server</description>
    <properties>
        <java.version>19</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.build.timestamp.format>yy.MM.dd</maven.build.timestamp.format>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.12.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <relocations>
                        <relocation>
                            <pattern>net.wesjd.anvilgui</pattern>
                            <shadedPattern>me.matiego.st14.resources.net.wesjd.anvilgui</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>club.minnced.discord.webhook</pattern>
                            <shadedPattern>me.matiego.st14.resources.club.minnced.discord.webhook</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.fasterxml.jackson</pattern>
                            <shadedPattern>me.matiego.st14.resources.com.fasterxml.jackson</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.iwebpp.crypto</pattern>
                            <shadedPattern>me.matiego.st14.resources.com.iwebpp.crypto</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.neovisionaries.ws.client</pattern>
                            <shadedPattern>me.matiego.st14.resources.com.neovisionaries.ws.client</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.zaxxer.hikari</pattern>
                            <shadedPattern>me.matiego.st14.resources.com.zaxxer.hikari</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.zwitserloot.cmdreader</pattern>
                            <shadedPattern>me.matiego.st14.resources.com.zwitserloot.cmdreader</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>gnu.trove</pattern>
                            <shadedPattern>me.matiego.st14.resources.gnu.trove</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>kotlin</pattern>
                            <shadedPattern>me.matiego.st14.resources.kotlin</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>lombok</pattern>
                            <shadedPattern>me.matiego.st14.resources.lombok</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>okhttp3</pattern>
                            <shadedPattern>me.matiego.st14.resources.okhttp3</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>okio</pattern>
                            <shadedPattern>me.matiego.st14.resources.okio</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>Class50.lombok</pattern>
                            <shadedPattern>me.matiego.st14.resources.Class50.lombok</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.minidns</pattern>
                            <shadedPattern>me.matiego.st14.resources.org.minidns</shadedPattern>
                        </relocation>
                    </relocations>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!--NMS-->
            <plugin>
                <groupId>ca.bkaw</groupId>
                <artifactId>paper-nms-maven-plugin</artifactId>
                <version>1.4.3</version>
                <executions>
                    <execution>
                        <phase>process-classes</phase>
                        <goals>
                            <goal>remap</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <!--NMS-->
    <pluginRepositories>
        <pluginRepository>
            <id>bytecode.space</id>
            <url>https://repo.bytecode.space/repository/maven-public/</url>
        </pluginRepository>
    </pluginRepositories>

    <repositories>
        <!--PaperMC API-->
        <repository>
            <id>papermc-repo</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <!--JDA-->
        <repository>
            <id>dv8tion</id>
            <name>m2-dv8tion</name>
            <url>https://m2.dv8tion.net/releases</url>
        </repository>
        <!--APIs from GitHub-->
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <!--AnvilGUI-->
        <repository>
            <id>codemc-snapshots</id>
            <url>https://repo.codemc.io/repository/maven-snapshots/</url>
        </repository>
        <!--WorldEdit-->
        <repository>
            <id>enginehub-maven</id>
            <url>https://maven.enginehub.org/repo/</url>
        </repository>
        <!--Dynmap-->
        <repository>
            <id>dynmap-repo</id>
            <url>https://repo.mikeprimm.com/</url>
        </repository>
    </repositories>

    <dependencies>
        <!--PaperMC API-->
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.20.4-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!--NMS-->
        <dependency>
            <groupId>ca.bkaw</groupId>
            <artifactId>paper-nms</artifactId>
            <version>1.20.4-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!--JDA-->
        <dependency>
            <groupId>net.dv8tion</groupId>
            <artifactId>JDA</artifactId>
            <version>5.0.0-beta.20</version>
            <exclusions>
                <exclusion>
                    <groupId>club.minnced</groupId>
                    <artifactId>opus-java</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <!--Discord's webhooks-->
        <dependency>
            <groupId>club.minnced</groupId>
            <artifactId>discord-webhooks</artifactId>
            <version>0.8.4</version>
            <scope>compile</scope>
        </dependency>
        <!--DNS for JdaBuilderUtils class-->
        <dependency>
            <groupId>org.minidns</groupId>
            <artifactId>minidns-hla</artifactId>
            <version>1.0.4</version>
        </dependency>
        <!--MySQL-->
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>5.0.1</version>
        </dependency>
        <!--Vault-->
        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>1.7.1</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.bukkit</groupId>
                    <artifactId>bukkit</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <!--AnvilGUI-->
        <dependency>
            <groupId>net.wesjd</groupId>
            <artifactId>anvilgui</artifactId>
            <version>1.9.2-SNAPSHOT</version>
            <scope>compile</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.bukkit</groupId>
                    <artifactId>bukkit</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <!--Lombok-->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.26</version>
            <scope>compile</scope>
        </dependency>
        <!--Commons lang-->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.12.0</version>
        </dependency>
        <!--Graves-->
        <dependency>
            <groupId>com.ranull</groupId>
            <artifactId>graves</artifactId>
            <version>4.9</version>
            <scope>system</scope>
            <systemPath>${project.basedir}\Graves-4.9.jar</systemPath>
        </dependency>
        <!--CountingBot-->
        <dependency>
            <groupId>com.github.matiego1</groupId>
            <artifactId>CountingBot</artifactId>
            <version>c0f3958</version>
            <exclusions>
                <exclusion>
                    <groupId>org.bukkit</groupId>
                    <artifactId>bukkit</artifactId>
                </exclusion>
            </exclusions>
            <scope>provided</scope>
        </dependency>
        <!--LuckPerms-->
        <dependency>
            <groupId>net.luckperms</groupId>
            <artifactId>api</artifactId>
            <version>5.4</version>
            <scope>provided</scope>
        </dependency>
        <!--WorldEdit-->
        <dependency>
            <groupId>com.sk89q.worldedit</groupId>
            <artifactId>worldedit-bukkit</artifactId>
            <version>7.2.14</version>
            <scope>provided</scope>
        </dependency>
        <!--CrashClaim-->
        <dependency>
            <groupId>net.crashcraft</groupId>
            <artifactId>crashclaim</artifactId>
            <version>1.0.41</version>
            <scope>system</scope>
            <systemPath>${project.basedir}\CrashClaim-1.0.41.jar</systemPath>
        </dependency>
        <!--Dynmap-->
        <dependency>
            <groupId>us.dynmap</groupId>
            <artifactId>dynmap-api</artifactId>
            <version>3.3</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
</project>
